update prediction model

--- a/Teams_Players/model_team.ipynb
+++ b/Teams_Players/model_team.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1602132437176",
+   "name": "python_defaultSpec_1602288297289",
    "display_name": "Python 3.6.10 64-bit"
   }
  },
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Ranking</th>\n      <th>Year</th>\n      <th>Points</th>\n      <th>Goals+</th>\n      <th>Goals-</th>\n      <th>avg age</th>\n      <th>avg heights (cm)</th>\n      <th>avg weight (kg)</th>\n      <th>avg player rating</th>\n      <th>avg player value (EU)</th>\n      <th>avg player wage</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>300.000000</td>\n      <td>300.000000</td>\n      <td>300.000000</td>\n      <td>300.000000</td>\n      <td>300.000000</td>\n      <td>300.000000</td>\n      <td>300.000000</td>\n      <td>300.000000</td>\n      <td>300.000000</td>\n      <td>3.000000e+02</td>\n      <td>300.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>10.360000</td>\n      <td>2017.000000</td>\n      <td>52.380000</td>\n      <td>33.920000</td>\n      <td>28.546667</td>\n      <td>25.146267</td>\n      <td>181.958333</td>\n      <td>75.724533</td>\n      <td>71.985800</td>\n      <td>5.943353e+06</td>\n      <td>30263.513333</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>5.725353</td>\n      <td>1.416576</td>\n      <td>18.017149</td>\n      <td>15.110084</td>\n      <td>14.455600</td>\n      <td>1.137406</td>\n      <td>1.424876</td>\n      <td>1.621078</td>\n      <td>3.779153</td>\n      <td>6.281174e+06</td>\n      <td>33020.036679</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>1.000000</td>\n      <td>2015.000000</td>\n      <td>16.000000</td>\n      <td>10.000000</td>\n      <td>6.000000</td>\n      <td>22.550000</td>\n      <td>178.120000</td>\n      <td>71.740000</td>\n      <td>59.650000</td>\n      <td>0.000000e+00</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>5.000000</td>\n      <td>2016.000000</td>\n      <td>40.000000</td>\n      <td>24.000000</td>\n      <td>19.000000</td>\n      <td>24.345000</td>\n      <td>181.037500</td>\n      <td>74.495000</td>\n      <td>69.547500</td>\n      <td>1.257226e+06</td>\n      <td>4726.250000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>10.000000</td>\n      <td>2017.000000</td>\n      <td>48.500000</td>\n      <td>30.000000</td>\n      <td>25.000000</td>\n      <td>25.080000</td>\n      <td>181.970000</td>\n      <td>75.650000</td>\n      <td>72.050000</td>\n      <td>4.282316e+06</td>\n      <td>22008.500000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>15.000000</td>\n      <td>2018.000000</td>\n      <td>63.250000</td>\n      <td>40.000000</td>\n      <td>33.250000</td>\n      <td>25.815000</td>\n      <td>182.960000</td>\n      <td>76.882500</td>\n      <td>74.352500</td>\n      <td>7.855902e+06</td>\n      <td>43120.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>20.000000</td>\n      <td>2019.000000</td>\n      <td>100.000000</td>\n      <td>102.000000</td>\n      <td>85.000000</td>\n      <td>28.330000</td>\n      <td>185.330000</td>\n      <td>80.300000</td>\n      <td>82.380000</td>\n      <td>3.179808e+07</td>\n      <td>188833.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 157
+     "execution_count": 4
     }
    ],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
       "text/plain": "LinearRegression()"
      },
      "metadata": {},
-     "execution_count": 242
+     "execution_count": 8
     }
    ],
    "source": [
@@ -116,22 +116,22 @@
     "#train the algorithm\n",
     "from sklearn.linear_model import LinearRegression\n",
     "regressor = LinearRegression()\n",
-    "regressor.fit(X_train, yy_train)\n"
+    "regressor.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "                   Coefficient\nGoals+                0.815951\nGoals-               -0.722818\navg player rating     0.700025\navg player wage       0.000040",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Coefficient</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Goals+</th>\n      <td>0.815951</td>\n    </tr>\n    <tr>\n      <th>Goals-</th>\n      <td>-0.722818</td>\n    </tr>\n    <tr>\n      <th>avg player rating</th>\n      <td>0.700025</td>\n    </tr>\n    <tr>\n      <th>avg player wage</th>\n      <td>0.000040</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                   Coefficient\nGoals+               -0.232149\nGoals-                0.221088\navg player rating    -0.323127\navg player wage       0.000003",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Coefficient</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Goals+</th>\n      <td>-0.232149</td>\n    </tr>\n    <tr>\n      <th>Goals-</th>\n      <td>0.221088</td>\n    </tr>\n    <tr>\n      <th>avg player rating</th>\n      <td>-0.323127</td>\n    </tr>\n    <tr>\n      <th>avg player wage</th>\n      <td>0.000003</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 243
+     "execution_count": 9
     }
    ],
    "source": [
@@ -153,30 +153,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "    Actual  Predicted\n8       49  48.188446\n88      48  46.552844\n12      44  33.799600\n21      79  72.630602\n39      20  28.836807",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Actual</th>\n      <th>Predicted</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>8</th>\n      <td>49</td>\n      <td>48.188446</td>\n    </tr>\n    <tr>\n      <th>88</th>\n      <td>48</td>\n      <td>46.552844</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>44</td>\n      <td>33.799600</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>79</td>\n      <td>72.630602</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>20</td>\n      <td>28.836807</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "    Actual  Predicted\n8        9  12.292814\n88       9  11.820744\n12      13  16.364421\n21       2   4.303570\n39      20  17.234902",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Actual</th>\n      <th>Predicted</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>12.292814</td>\n    </tr>\n    <tr>\n      <th>88</th>\n      <td>9</td>\n      <td>11.820744</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>13</td>\n      <td>16.364421</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>2</td>\n      <td>4.303570</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>20</td>\n      <td>17.234902</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 246
+     "execution_count": 10
     }
    ],
    "source": [
     "#predictions\n",
     "y_pred = regressor.predict(X_test)\n",
     "#compare the predictions\n",
-    "df = pd.DataFrame({'Actual': yy_test, 'Predicted': y_pred})\n",
+    "df = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred})\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -184,15 +184,15 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Mean Absolute Error: 5.441206868698233\nMean Squared Error: 43.538385752572125\nRoot Mean Squared Error: 6.598362353839938\n"
+     "text": "Mean Absolute Error: 2.3701180671722466\nMean Squared Error: 9.876294169505078\nRoot Mean Squared Error: 3.1426571829432937\n"
     }
    ],
    "source": [
     "#Evaluation of the algorithm\n",
     "from sklearn import metrics\n",
-    "print('Mean Absolute Error:', metrics.mean_absolute_error(yy_test, y_pred))\n",
-    "print('Mean Squared Error:', metrics.mean_squared_error(yy_test, y_pred))\n",
-    "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(yy_test, y_pred)))"
+    "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))\n",
+    "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
+    "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
    ]
   },
   {
